--- a/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Validate BHW.html
@@ -124,7 +124,7 @@
                                     <td class="text-center">{{ bhw.user.middle_name }}</td>
                                     <td class="text-center">{{ bhw.user.last_name }}</td>
                                     <td class="text-center">{{ bhw.user.suffix_name }}</td>
-                                    <td class="text-center">09123456789</td>
+                                    <td class="text-center">{{ bhw.user.phone_num}}</td>
                                     <td class="text-center">{{ bhw.user.email }}</td>
                                     <td class="text-center">{{ bhw.bhw_barangay }}</td>
                                     <td style="text-align: center;">
