--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -58,7 +58,7 @@
                             <div class="card-body">
                                 <div class="row">
                                     <div class="col-sm">
-                                        <p class="mb-0">Full Name:</p>
+                                        <p class="fw-bold mb-0">Full Name:</p>
                                     </div>
                                     <div class="col-sm">
                                         <p class="text-muted mb-0">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }} {{ preschooler.suffix_name }}</p>
@@ -67,7 +67,7 @@
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm">
-                                        <p class="mb-0">Date of Birth:</p>
+                                        <p class="fw-bold mb-0">Date of Birth:</p>
                                     </div>
                                     <div class="col-sm">
                                         <p class="text-muted mb-0">{{ preschooler.birthday }}</p>
@@ -76,7 +76,7 @@
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm">
-                                        <p class="mb-0">Age:</p>
+                                        <p class="fw-bold mb-0">Age:</p>
                                     </div>
                                     <div class="col-sm">
                                         <p class="text-muted mb-0">{{ preschooler.age_months }} Months</p>
@@ -85,7 +85,7 @@
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm">
-                                        <p class="mb-0">Gender:</p>
+                                        <p class="fw-bold mb-0">Gender:</p>
                                     </div>
                                     <div class="col-sm">
                                         <p class="text-muted mb-0">{{ preschooler.gender }}</p>
@@ -94,7 +94,7 @@
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm">
-                                        <p class="mb-0">Weight:</p>
+                                        <p class="fw-bold mb-0">Weight:</p>
                                     </div>
                                     {% if preschooler.weight is None%}
                                     <div class="col-sm">
@@ -107,7 +107,7 @@
                                     {% endif %}
 
                                     <div class="col-sm">
-                                        <p class="mb-0">Height:</p>
+                                        <p class="fw-bold mb-0">Height:</p>
                                     </div>
                                     {% if preschooler.height is None%}
                                     <div class="col-sm">
@@ -122,10 +122,19 @@
                                 <hr>
                                 <div class="row">
                                     <div class="col-sm">
-                                        <p class="mb-0">Health Problem/s:</p>
+                                        <p class="fw-bold mb-0">Date Measured:</p>
                                     </div>
                                     <div class="col-sm">
-                                        <p class="text-muted mb-0"></p>
+                                        <p class="text-muted mb-0">{{ preschooler.date_measured }}</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <p class="fw-bold mb-0">Health Problem/s:</p>
+                                    </div>
+                                    <div class="col-sm">
+                                        <p class="text-muted mb-0">Mema</p>
                                     </div>
                                 </div>
                             </div>
@@ -291,6 +300,12 @@
     'April',
     'May',
     'June',
+    'July',
+    'August',
+    'September',
+    'October',
+    'November',
+    'December',
   ];
 
   const data = {
