memalagay logs + health problems forms input

--- a/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Preschooler Profile.html
@@ -260,6 +260,10 @@
                                                     <label id="user-lbl" data-error="wrong" data-success="right">Date Measured:</label>
                                                     {{ form.date_measured }}
                                                 </div>
+                                                <div class="md-form">
+                                                    <label id="user-lbl" data-error="wrong" data-success="right">Health Problem/s:</label>
+                                                    {{ form.health_problem }}
+                                                </div>
                                                 <div class="modal-footer">
                                                     <button type="submit" class="btn " style="background-color: #188045; color: white;">Save</button>
                                                     <button type="button" class="btn" style="background-color: #EF3A25; color: white;" data-bs-dismiss="modal" aria-label="Close"> Cancel</button>
